# decentralized_actors

./: Cargo.toml  README.md
decentralized_actors/: Cargo.toml
decentralized_actors/examples/: two_routers.rs
decentralized_actors/src/: lib.rs  mail.rs  router.rs
src/: main.rs
