[package]
name = "decentralized_actors"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
rand = "0.8.5"
secp256k1 = { version = "0.30.0", features = ["rand"] }
sha2 = "0.10.8"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }

[dev-dependencies]
simple_logger = "5.0.0"

[[example]]
name = "two_routers"
